# tamuhack-s25

./: CMakeLists.txt  README.MD  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/bluetooth_module/: CMakeLists.txt  bluetooth_challenges.c
components/bluetooth_module/include/: bluetooth_challenges.h
components/display/: CMakeLists.txt  display.c  font8x8_basic.c  lv_conf.h  ssd1306.c
components/display/include/: display.h  font8x8_basic.h  ssd1306.h
components/hardware_module/: CMakeLists.txt  hardware_challenges.c
components/hardware_module/include/: hardware_challenges.h
components/network_module/: CMakeLists.txt  network_challanges.c  network_challenges.c
components/network_module/include/: network_challenges.h
components/web_module/: CMakeLists.txt  web_challenges.c
components/web_module/include/: web_challenges.h
connectionOnly/: connectionOnly.ino
main/: CMakeLists.txt  bluetooth_challenge_main.c  file_server.c  file_serving_example_common.h  hardware_challenge_main.c  main.c  main.ino  network_challenge_main.c  softap_sta.c  web_challenge_main.c
micReadingOnly/: micReadingOnly.ino
totalFunctionality/: totalFunctionality.ino
